finshing the html part of the project

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Random Color generator</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="color-container">#123456</div>
+        <div class="color-container">#123456</div>
+        <div class="color-container">#123456</div>
+        <div class="color-container">#123456</div>
+        <div class="color-container">#123456</div>
+    </div>
 </body>
 </html>
