--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
         <div class="color-container">#123456</div>
         <div class="color-container">#123456</div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
