--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Random Color generator</h1>
     <div class="container">
-        <div class="color-container">#123456</div>
-        <div class="color-container">#123456</div>
-        <div class="color-container">#123456</div>
-        <div class="color-container">#123456</div>
-        <div class="color-container">#123456</div>
     </div>
     <script src="index.js"></script>
 </body>
